--- a/pom.xml
+++ b/pom.xml
@@ -5,12 +5,13 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.example</groupId>
-  <artifactId>automated-tests</artifactId>
+  <artifactId>automation-template</artifactId>
+  <name>Automation Template</name>
   <version>1.0-SNAPSHOT</version>
 
   <properties>
-    <maven.compiler.source>1.8</maven.compiler.source>
-    <maven.compiler.target>1.8</maven.compiler.target>
+    <maven.compiler.source>21</maven.compiler.source>
+    <maven.compiler.target>21</maven.compiler.target>
   </properties>
 
   <dependencies>
@@ -50,7 +51,7 @@
       <version>7.14.0</version>
     </dependency>
 
-    <!-- Gherkin (opcjonalnie do walidacji składni) -->
+    <!-- Gherkin (optional, for syntax validation) -->
     <dependency>
       <groupId>io.cucumber</groupId>
       <artifactId>gherkin</artifactId>
@@ -63,12 +64,6 @@
       <artifactId>slf4j-simple</artifactId>
       <version>2.0.13</version>
     </dependency>
-      <dependency>
-          <groupId>log4j</groupId>
-          <artifactId>log4j</artifactId>
-          <version>1.2.17</version>
-          <scope>test</scope>
-      </dependency>
   </dependencies>
 
   <build>
