--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -54,6 +54,9 @@ jobs:
           fi
           rm -rf allure-dl 2>/dev/null || true
 
+      - name: Create allure-results directory
+        run: mkdir -p allure-results
+
       - name: Run Smoke tests (Pull Request)
         if: github.event_name == 'pull_request'
         run: pytest tests/ -m smoke -v --tb=short --alluredir=allure-results
@@ -68,11 +71,14 @@ jobs:
 
       - name: Generate Allure report
         if: always()
+        continue-on-error: true
         run: |
-          ALLURE_VER="2.32.0"
-          wget -q "https://github.com/allure-framework/allure2/releases/download/${ALLURE_VER}/allure-${ALLURE_VER}.tgz" -O allure.tgz
-          tar -xzf allure.tgz
-          ./allure-${ALLURE_VER}/bin/allure generate allure-results --clean -o allure-report
+          if [ -n "$(ls -A allure-results 2>/dev/null)" ]; then
+            ALLURE_VER="2.32.0"
+            wget -q "https://github.com/allure-framework/allure2/releases/download/${ALLURE_VER}/allure-${ALLURE_VER}.tgz" -O allure.tgz
+            tar -xzf allure.tgz
+            ./allure-${ALLURE_VER}/bin/allure generate allure-results --clean -o allure-report
+          fi
 
       - name: Upload test results (Allure)
         if: always()
