CI: install GeckoDriver from GitHub releases (apt package not in Ubuntu 22.04)

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,11 +39,18 @@ jobs:
       - name: Install dependencies
         run: pip install -r requirements.txt
 
-      - name: Install Firefox and GeckoDriver
+      - name: Install Firefox
         run: |
           sudo apt-get update -qq
-          sudo apt-get install -y firefox geckodriver
+          sudo apt-get install -y firefox
           firefox --version
+
+      - name: Install GeckoDriver
+        run: |
+          GECKO_VER="v0.34.0"
+          wget -q "https://github.com/mozilla/geckodriver/releases/download/${GECKO_VER}/geckodriver-${GECKO_VER}-linux64.tar.gz" -O /tmp/geckodriver.tar.gz
+          sudo tar -xzf /tmp/geckodriver.tar.gz -C /tmp
+          sudo mv /tmp/geckodriver /usr/bin/geckodriver
           geckodriver --version
 
       - name: Prepare for Allure history (trends)
